feat: Initialize Library App with basic structure and authentication
- Added .editorconfig for consistent coding styles across files.
- Created .eslintrc for JavaScript linting configuration.
- Introduced .gitignore to exclude unnecessary files from version control.
- Set up .pre-commit-config.yaml for pre-commit hooks including ruff, eslint, and prettier.
- Added README.md with installation instructions and contribution guidelines.
- Defined app version in __init__.py.
- Implemented user registration and login API in auth.py.
- Created hooks.py for app metadata and method overrides.
- Added modules.txt to define app modules.
- Included license.txt for MIT licensing.
- Configured pyproject.toml for project dependencies and settings.
- Updated assets JSON files for RTL and standard assets.

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -63,3 +63,31 @@ __pypackages__/
 library-bench/config/redis*.conf
 library-bench/config/redis*.conf
 library-bench/config/redis*.acl
+
+# Bench environment
+/backend/library-bench/env/
+/backend/library-bench/node_modules/
+/backend/library-bench/config/
+/backend/library-bench/logs/
+/backend/library-bench/package-lock.json
+
+# Site-specific files
+/backend/library-bench/sites/assets/
+/backend/library-bench/sites/*/private/
+/backend/library-bench/sites/*/backups/
+/backend/library-bench/sites/*/site_config.json
+/backend/library-bench/sites/apps.txt
+
+# Redis and DB state
+/backend/library-bench/config/pids/
+/backend/library-bench/config/*.rdb
+
+# Cookies or test files
+cookies.txt
+
+# Ignore all apps except your custom one
+/backend/library-bench/apps/frappe/
+/backend/library-bench/apps/erpnext/
+
+# Keep only your app
+!/backend/library-bench/apps/library_app/
