feat: add login and registration pages with form handling
- Created `Login` and `Register` components for user authentication.
- Integrated `axios` for API calls to handle login and registration.
- Added password strength indicator in the registration form.
- Implemented routing for login and registration using `react-router-dom`.
- Included `react-hot-toast` for user feedback on form submissions.
- Updated `App` component to include routes for login and registration.
- Configured CORS in `site_config.json` for local development.

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -5,7 +5,7 @@ library-bench/package-lock.json
 library-bench/yarn.lock
 
 # Sites: configs, backups, logs, private data
-library-bench/sites/*/site_config.json
+# library-bench/sites/*/site_config.json
 library-bench/sites/*/private/
 library-bench/sites/*/backups/
 library-bench/sites/*/locks/
