feat: enhance reservation creation with email notification and update notified status

--- a/backend/library-bench/sites/library.localhost/site_config.json
+++ b/backend/library-bench/sites/library.localhost/site_config.json
@@ -3,5 +3,6 @@
  "db_name": "_afbd398cd86d7497",
  "db_password": "eg0eJDYrDSUGoSOZ",
  "db_type": "mariadb",
- "developer_mode": 1
+ "developer_mode": 1,
+ "encryption_key": "7VnpAT66m-vT4SXkLxEsH5x8Xix6mQTNJFBq5YBuMUM="
 }
